--- a/source/form.html
+++ b/source/form.html
@@ -13,16 +13,17 @@
   </head>
   <body class="page__body">
     <header class="page-header">
-      <nav class="page-header__main-nav main-nav">
+      <nav class="page-header__main-nav main-nav main-nav--open">
         <a class="main-nav__logo logo" href="index.html">
           <img class="logo__img" src="img/logo.svg" width="185" height="96" alt="Главный логотип Седоны.">
         </a>
-        <button class="main-nav__toggle main-nav-toggle main-nav-toggle--open" type="button">
+        <button class="main-nav__toggle main-nav-toggle" type="button">
+          <span class="main-nav-toggle__burger-line"></span>
           <span class="visually-hidden">Открыть/закрыть меню сайта</span>
         </button>
         <ul class="page-header__site-menu site-menu">
           <li class="site-menu__item">
-            <a class="site-menu__link" href="index.html">Главнвя</a>
+            <a class="site-menu__link" href="index.html">Главная</a>
           </li>
           <li class="site-menu__item">
             <a class="site-menu__link" href="catalog.html">Фото и видео</a>
@@ -57,15 +58,15 @@
               <legend class="reviews-form-group__title">Представьтесь:</legend>
               <div class="reviews-form-group__box input-text-box">
                 <label class="input-text-box__label" for="reviews-form-name-field">Имя<sup>*</sup>:</label>
-                <input class="input-text-box__input-text input-text" id="reviews-form-name-field" name="name" type="text" placeholder="Имя" value="Пётр" required>
+                <input class="input-text-box__input-text input-text" id="reviews-form-name-field" name="name" type="text" placeholder="Имя" value="" required>
               </div>
               <div class="reviews-form-group__box input-text-box">
                 <label class="input-text-box__label" for="reviews-form-surname-field">Фамилия<sup>*</sup>:</label>
-                <input class="input-text-box__input-text input-text" id="reviews-form-surname-field" name="surname" type="text" placeholder="Фамилия" value="Иванов *" required>
+                <input class="input-text-box__input-text input-text" id="reviews-form-surname-field" name="surname" type="text" placeholder="Фамилия" value="" required>
               </div>
               <div class="reviews-form-group__box input-text-box">
                 <label class="input-text-box__label" for="reviews-form-fathers-name-field">Отчество<sup>*</sup>:</label>
-                <input class="input-text-box__input-text input-text" id="reviews-form-fathers-name-field" name="fathers-name" type="text" placeholder="Отчество" value="Викторович" required>
+                <input class="input-text-box__input-text input-text" id="reviews-form-fathers-name-field" name="fathers-name" type="text" placeholder="Отчество" value="" required>
               </div>
             </fieldset>
             <fieldset class="reviews-form__group reviews-form-group reviews-form-group--icons">
@@ -81,7 +82,9 @@
             </fieldset>
           </div>
           <fieldset class="reviews-form__group reviews-form-group reviews-form-group--impression">
-            <legend class="reviews-form-group__title">Ваше общее впечатление:</legend>
+            <legend class="reviews-form-group__title reviews-form-group__title--decor">
+              <div class="reviews-form-group__title-content">Ваше общее впечатление:</div>
+            </legend>
             <div class="reviews-form-group__box radio-input-box">
               <input class="radio-input-box__radio-input visually-hidden" id="reviews-form-positive-impression" name="impression" value="positive-impression" type="radio" checked>
               <label class="radio-input-box__label" for="reviews-form-positive-impression">Скорее положительное</label>
@@ -96,7 +99,9 @@
             </div>
           </fieldset>
           <fieldset class="reviews-form__group reviews-form-group reviews-form-group--attraction">
-            <legend class="reviews-form-group__title">Посещенные достопримечательности:</legend>
+            <legend class="reviews-form-group__title reviews-form-group__title--decor">
+              <div class="reviews-form-group__title-content">Посещенные достопримечательности:</div>
+            </legend>
             <div class="reviews-form-group__box checkbox-box">
               <input class="checkbox-box__checkbox visually-hidden" id="reviews-form-devils-bridge" name="devils-bridge" type="checkbox" checked>
               <label class="checkbox-box__label" for="reviews-form-devils-bridge">Мост Дьявола</label>
@@ -115,7 +120,9 @@
             </div>
           </fieldset>
           <fieldset class="reviews-form__group reviews-form-group">
-            <legend class="reviews-form-group__title">Опишите свои эмоции:</legend>
+            <legend class="reviews-form-group__title reviews-form-group__title--decor">
+              <div class="reviews-form-group__title-content">Опишите свои эмоции:</div>
+            </legend>
             <div class="reviews-form-group__box">
               <label class="visually-hidden" for="reviews-form-emotions">Ваши эмоции</label>
               <textarea class="textarea-group__textarea textarea" id="reviews-form-emotions" name="emotions" placeholder="Опишите подробно все свои восторги "></textarea>
@@ -134,7 +141,7 @@
         <li class="socials-list__item">
           <a class="socials-list__link" href="#">
             <svg class="socials-list__link-icon" width="24" height="14" viewBox="0 0 24 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M23.45 0.948C23.616 0.402 23.45 0 22.655 0H20.03C19.362 0 19.054 0.347 18.887 0.73C18.887 0.73 17.552 3.926 15.661 6.002C15.049 6.604 14.771 6.795 14.437 6.795C14.27 6.795 14.019 6.604 14.019 6.057V0.948C14.019 0.292 13.835 0 13.279 0H9.151C8.734 0 8.483 0.304 8.483 0.593C8.483 1.214 9.429 1.358 9.526 3.106V6.904C9.526 7.737 9.373 7.888 9.039 7.888C8.149 7.888 5.984 4.677 4.699 1.003C4.45 0.288 4.198 0 3.527 0H0.9C0.15 0 0 0.347 0 0.73C0 1.412 0.89 4.8 4.145 9.281C6.315 12.341 9.37 14 12.153 14C13.822 14 14.028 13.632 14.028 12.997V10.684C14.028 9.947 14.186 9.8 14.715 9.8C15.105 9.8 15.772 9.992 17.33 11.467C19.11 13.216 19.403 14 20.405 14H23.03C23.78 14 24.156 13.632 23.94 12.904C23.702 12.18 22.852 11.129 21.725 9.882C21.113 9.172 20.195 8.407 19.916 8.024C19.527 7.533 19.638 7.314 19.916 6.877C19.916 6.877 23.116 2.451 23.449 0.948H23.45Z" fill="white"/>
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M23.45 0.948C23.616 0.402 23.45 0 22.655 0H20.03C19.362 0 19.054 0.347 18.887 0.73C18.887 0.73 17.552 3.926 15.661 6.002C15.049 6.604 14.771 6.795 14.437 6.795C14.27 6.795 14.019 6.604 14.019 6.057V0.948C14.019 0.292 13.835 0 13.279 0H9.151C8.734 0 8.483 0.304 8.483 0.593C8.483 1.214 9.429 1.358 9.526 3.106V6.904C9.526 7.737 9.373 7.888 9.039 7.888C8.149 7.888 5.984 4.677 4.699 1.003C4.45 0.288 4.198 0 3.527 0H0.9C0.15 0 0 0.347 0 0.73C0 1.412 0.89 4.8 4.145 9.281C6.315 12.341 9.37 14 12.153 14C13.822 14 14.028 13.632 14.028 12.997V10.684C14.028 9.947 14.186 9.8 14.715 9.8C15.105 9.8 15.772 9.992 17.33 11.467C19.11 13.216 19.403 14 20.405 14H23.03C23.78 14 24.156 13.632 23.94 12.904C23.702 12.18 22.852 11.129 21.725 9.882C21.113 9.172 20.195 8.407 19.916 8.024C19.527 7.533 19.638 7.314 19.916 6.877C19.916 6.877 23.116 2.451 23.449 0.948H23.45Z" fill="currentColor"/>
             </svg>
             <span class="visually-hidden">ВКонтакте</span>
           </a>
@@ -142,7 +149,7 @@
         <li class="socials-list__item">
           <a class="socials-list__link" href="#">
             <svg class="socials-list__link-icon" width="22" height="18" viewBox="0 0 22 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M21.4393 1.62225L18.2705 16.566C18.0313 17.6205 17.408 17.883 16.5223 17.3865L11.6938 13.8285L9.36425 16.0695C9.10626 16.3275 8.891 16.5428 8.39375 16.5428L8.741 11.6258L17.6893 3.54C18.0785 3.1935 17.6045 3.00075 17.0848 3.348L6.02225 10.314L1.25976 8.823C0.224006 8.49975 0.205256 7.78725 1.47576 7.29L20.1035 0.113253C20.966 -0.209997 21.7205 0.305253 21.4393 1.623V1.62225Z" fill="white"/>
+              <path d="M21.4393 1.62225L18.2705 16.566C18.0313 17.6205 17.408 17.883 16.5223 17.3865L11.6938 13.8285L9.36425 16.0695C9.10626 16.3275 8.891 16.5428 8.39375 16.5428L8.741 11.6258L17.6893 3.54C18.0785 3.1935 17.6045 3.00075 17.0848 3.348L6.02225 10.314L1.25976 8.823C0.224006 8.49975 0.205256 7.78725 1.47576 7.29L20.1035 0.113253C20.966 -0.209997 21.7205 0.305253 21.4393 1.623V1.62225Z" fill="currentColor"/>
             </svg>
             <span class="visually-hidden">Телеграм</span>
           </a>
@@ -150,7 +157,7 @@
         <li class="socials-list__item">
           <a class="socials-list__link" href="#">
             <svg class="socials-list__link-icon" width="20" height="14" viewBox="0 0 20 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M17.1813 0H2.81331C1.30618 0 0 1.3 0 2.8V11.1C0 12.7 1.30618 14 2.81331 14H17.1813C18.7889 14 19.9946 12.7 19.9946 11.2V2.8C20.095 1.3 18.7889 0 17.1813 0ZM7.03326 10.4V3.6L13.8656 7L7.03326 10.4Z" fill="white"/>
+              <path d="M17.1813 0H2.81331C1.30618 0 0 1.3 0 2.8V11.1C0 12.7 1.30618 14 2.81331 14H17.1813C18.7889 14 19.9946 12.7 19.9946 11.2V2.8C20.095 1.3 18.7889 0 17.1813 0ZM7.03326 10.4V3.6L13.8656 7L7.03326 10.4Z" fill="currentColor"/>
             </svg>
             <span class="visually-hidden">Ютуб</span>
           </a>
@@ -159,7 +166,7 @@
       <a class="page-footer__developer-link" href="https://htmlacademy.ru/intensive/adaptive">
         <span class="page-footer__developer-link-text">Разработано</span>
         <svg class="page-footer__developer-link-image" width="27" height="35" viewBox="0 0 27 35" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M13.6 0H13.5L0 1.4V26.1L13.5 34.1L26.9 26.1V1.4L13.6 0ZM25 12.1L13.5 5.3V5.2H13.4L13.3 5.1V5.2L1.9 12.1V3.1L13.4 1.9L25 3.1V12.1ZM13.4 6.8L24.9 13.5L20.4 16.1L13.3 11.9V13.3L19.2 16.8L18.3 17.3L13.3 14.3V15.7L17.1 18L16.3 18.5L13.3 16.7V18.1L15.2 19.2L13.4 20.3L2 13.6L13.4 6.8ZM1.9 15.1L13.3 21.9V22.9L5.4 18.2V19.6L13.4 24.4V25.5L5.4 20.8V22.2L13.4 27L21.5 22.1V16.9L24.9 14.9V24.9L13.4 31.8L1.9 25V15.1Z" fill="black"/>
+          <path d="M13.6 0H13.5L0 1.4V26.1L13.5 34.1L26.9 26.1V1.4L13.6 0ZM25 12.1L13.5 5.3V5.2H13.4L13.3 5.1V5.2L1.9 12.1V3.1L13.4 1.9L25 3.1V12.1ZM13.4 6.8L24.9 13.5L20.4 16.1L13.3 11.9V13.3L19.2 16.8L18.3 17.3L13.3 14.3V15.7L17.1 18L16.3 18.5L13.3 16.7V18.1L15.2 19.2L13.4 20.3L2 13.6L13.4 6.8ZM1.9 15.1L13.3 21.9V22.9L5.4 18.2V19.6L13.4 24.4V25.5L5.4 20.8V22.2L13.4 27L21.5 22.1V16.9L24.9 14.9V24.9L13.4 31.8L1.9 25V15.1Z" fill="currentColor"/>
         </svg>
         <span class="visually-hidden" lang="en">HTML-Academy</span>
       </a>
@@ -180,5 +187,6 @@
         </div>
       </div>
     </div>
+    <script src="../source/js/script.js"></script>
   </body>
 </html>
