--- a/source/index.html
+++ b/source/index.html
@@ -13,11 +13,12 @@
   </head>
   <body class="page__body">
     <header class="page-header">
-      <nav class="page-header__main-nav main-nav">
+      <nav class="page-header__main-nav main-nav main-nav--open">
         <a class="main-nav__logo logo" href="index.html">
           <img class="logo__img" src="img/logo.svg" width="185" height="96" alt="Главный логотип Седоны.">
         </a>
-        <button class="main-nav__toggle main-nav-toggle main-nav-toggle--open" type="button">
+        <button class="main-nav__toggle main-nav-toggle" type="button">
+          <span class="main-nav-toggle__burger-line"></span>
           <span class="visually-hidden">Открыть/закрыть меню сайта</span>
         </button>
         <ul class="page-header__site-menu site-menu">
@@ -47,11 +48,11 @@
           <img class="promo-images-wrapper__image-text" src="img/welcome.svg" width="282" height="214" alt="Добро пожаловать в великолепную Седону. “Потому что Гранд Каньон - отстой!„">
           <img class="promo-images-wrapper__image" src="img/promo-image-mobile.jpg" width="320" height="389" alt="Пейзаж Седоны. Красивые скалистые горы с деревьями.">
         </div>
-        <p class="promo__slogan container">Седона — небольшой<br> городок в&nbsp;Аризоне, заслуживающий большего!</p>
+        <p class="promo__slogan">Седона — небольшой<br> городок в&nbsp;Аризоне, заслуживающий большего!</p>
       </section>
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества Седоны</h2>
-        <p class="advantages__lead container">Рассмотрим 5 причин, по&nbsp;которым Седона круче, чем&nbsp;Гранд-Каньон!</p>
+        <p class="advantages__lead">Рассмотрим 5 причин, по&nbsp;которым Седона круче, чем&nbsp;Гранд-Каньон!</p>
         <ul class="advantages-list">
           <li class="advantages-list__item advantages-list__item--large advantages-list__item--accented">
             <div class="advantages-list__text-content">
@@ -96,13 +97,13 @@
         </ul>
       </section>
       <section class="trip-date">
-        <h2 class="trip-date__title container">Заинтересовались?</h2>
-        <p class="trip-date__lead container">Укажите предполагаемые даты поездки,<br> и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в&nbsp;Cедоне</p>
+        <h2 class="trip-date__title">Заинтересовались?</h2>
+        <p class="trip-date__lead">Укажите предполагаемые даты поездки,<br> и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в&nbsp;Cедоне</p>
         <a class="trip-date__button button" href="#">Найти гостиницу</a>
       </section>
       <section class="map">
         <h2 class="visually-hidden">Карта с расположением Седоны</h2>
-        <iframe class="map__image" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1675738.146511372!2d-111.95072129463118!3d34.88320279659509!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2suk!4v1669828517800!5m2!1sru!2suk" width="320" height="350"  name="Map of Sedona" allow="fullscreen" loading="lazy" referrerpolicy="no-referrer" frameborder="0"></iframe>
+        <iframe class="map__image" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1675738.146511372!2d-111.95072129463118!3d34.88320279659509!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2suk!4v1669828517800!5m2!1sru!2suk" width="320" height="350"  name="Map of Sedona" allow="fullscreen" loading="lazy" referrerpolicy="no-referrer" frameborder="0" title="Карта расположения городка Седона, штат Аризона."></iframe>
       </section>
     </main>
     <footer class="page-footer">
@@ -111,7 +112,7 @@
         <li class="socials-list__item">
           <a class="socials-list__link" href="#">
             <svg class="socials-list__link-icon" width="24" height="14" viewBox="0 0 24 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M23.45 0.948C23.616 0.402 23.45 0 22.655 0H20.03C19.362 0 19.054 0.347 18.887 0.73C18.887 0.73 17.552 3.926 15.661 6.002C15.049 6.604 14.771 6.795 14.437 6.795C14.27 6.795 14.019 6.604 14.019 6.057V0.948C14.019 0.292 13.835 0 13.279 0H9.151C8.734 0 8.483 0.304 8.483 0.593C8.483 1.214 9.429 1.358 9.526 3.106V6.904C9.526 7.737 9.373 7.888 9.039 7.888C8.149 7.888 5.984 4.677 4.699 1.003C4.45 0.288 4.198 0 3.527 0H0.9C0.15 0 0 0.347 0 0.73C0 1.412 0.89 4.8 4.145 9.281C6.315 12.341 9.37 14 12.153 14C13.822 14 14.028 13.632 14.028 12.997V10.684C14.028 9.947 14.186 9.8 14.715 9.8C15.105 9.8 15.772 9.992 17.33 11.467C19.11 13.216 19.403 14 20.405 14H23.03C23.78 14 24.156 13.632 23.94 12.904C23.702 12.18 22.852 11.129 21.725 9.882C21.113 9.172 20.195 8.407 19.916 8.024C19.527 7.533 19.638 7.314 19.916 6.877C19.916 6.877 23.116 2.451 23.449 0.948H23.45Z" fill="white"/>
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M23.45 0.948C23.616 0.402 23.45 0 22.655 0H20.03C19.362 0 19.054 0.347 18.887 0.73C18.887 0.73 17.552 3.926 15.661 6.002C15.049 6.604 14.771 6.795 14.437 6.795C14.27 6.795 14.019 6.604 14.019 6.057V0.948C14.019 0.292 13.835 0 13.279 0H9.151C8.734 0 8.483 0.304 8.483 0.593C8.483 1.214 9.429 1.358 9.526 3.106V6.904C9.526 7.737 9.373 7.888 9.039 7.888C8.149 7.888 5.984 4.677 4.699 1.003C4.45 0.288 4.198 0 3.527 0H0.9C0.15 0 0 0.347 0 0.73C0 1.412 0.89 4.8 4.145 9.281C6.315 12.341 9.37 14 12.153 14C13.822 14 14.028 13.632 14.028 12.997V10.684C14.028 9.947 14.186 9.8 14.715 9.8C15.105 9.8 15.772 9.992 17.33 11.467C19.11 13.216 19.403 14 20.405 14H23.03C23.78 14 24.156 13.632 23.94 12.904C23.702 12.18 22.852 11.129 21.725 9.882C21.113 9.172 20.195 8.407 19.916 8.024C19.527 7.533 19.638 7.314 19.916 6.877C19.916 6.877 23.116 2.451 23.449 0.948H23.45Z" fill="currentColor"/>
             </svg>
             <span class="visually-hidden">ВКонтакте</span>
           </a>
@@ -119,7 +120,7 @@
         <li class="socials-list__item">
           <a class="socials-list__link" href="#">
             <svg class="socials-list__link-icon" width="22" height="18" viewBox="0 0 22 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M21.4393 1.62225L18.2705 16.566C18.0313 17.6205 17.408 17.883 16.5223 17.3865L11.6938 13.8285L9.36425 16.0695C9.10626 16.3275 8.891 16.5428 8.39375 16.5428L8.741 11.6258L17.6893 3.54C18.0785 3.1935 17.6045 3.00075 17.0848 3.348L6.02225 10.314L1.25976 8.823C0.224006 8.49975 0.205256 7.78725 1.47576 7.29L20.1035 0.113253C20.966 -0.209997 21.7205 0.305253 21.4393 1.623V1.62225Z" fill="white"/>
+              <path d="M21.4393 1.62225L18.2705 16.566C18.0313 17.6205 17.408 17.883 16.5223 17.3865L11.6938 13.8285L9.36425 16.0695C9.10626 16.3275 8.891 16.5428 8.39375 16.5428L8.741 11.6258L17.6893 3.54C18.0785 3.1935 17.6045 3.00075 17.0848 3.348L6.02225 10.314L1.25976 8.823C0.224006 8.49975 0.205256 7.78725 1.47576 7.29L20.1035 0.113253C20.966 -0.209997 21.7205 0.305253 21.4393 1.623V1.62225Z" fill="currentColor"/>
             </svg>
             <span class="visually-hidden">Телеграм</span>
           </a>
@@ -127,7 +128,7 @@
         <li class="socials-list__item">
           <a class="socials-list__link" href="#">
             <svg class="socials-list__link-icon" width="20" height="14" viewBox="0 0 20 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M17.1813 0H2.81331C1.30618 0 0 1.3 0 2.8V11.1C0 12.7 1.30618 14 2.81331 14H17.1813C18.7889 14 19.9946 12.7 19.9946 11.2V2.8C20.095 1.3 18.7889 0 17.1813 0ZM7.03326 10.4V3.6L13.8656 7L7.03326 10.4Z" fill="white"/>
+              <path d="M17.1813 0H2.81331C1.30618 0 0 1.3 0 2.8V11.1C0 12.7 1.30618 14 2.81331 14H17.1813C18.7889 14 19.9946 12.7 19.9946 11.2V2.8C20.095 1.3 18.7889 0 17.1813 0ZM7.03326 10.4V3.6L13.8656 7L7.03326 10.4Z" fill="currentColor"/>
             </svg>
             <span class="visually-hidden">Ютуб</span>
           </a>
@@ -136,10 +137,11 @@
       <a class="page-footer__developer-link" href="https://htmlacademy.ru/intensive/adaptive">
         <span class="page-footer__developer-link-text">Разработано</span>
         <svg class="page-footer__developer-link-image" width="27" height="35" viewBox="0 0 27 35" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M13.6 0H13.5L0 1.4V26.1L13.5 34.1L26.9 26.1V1.4L13.6 0ZM25 12.1L13.5 5.3V5.2H13.4L13.3 5.1V5.2L1.9 12.1V3.1L13.4 1.9L25 3.1V12.1ZM13.4 6.8L24.9 13.5L20.4 16.1L13.3 11.9V13.3L19.2 16.8L18.3 17.3L13.3 14.3V15.7L17.1 18L16.3 18.5L13.3 16.7V18.1L15.2 19.2L13.4 20.3L2 13.6L13.4 6.8ZM1.9 15.1L13.3 21.9V22.9L5.4 18.2V19.6L13.4 24.4V25.5L5.4 20.8V22.2L13.4 27L21.5 22.1V16.9L24.9 14.9V24.9L13.4 31.8L1.9 25V15.1Z" fill="black"/>
+          <path d="M13.6 0H13.5L0 1.4V26.1L13.5 34.1L26.9 26.1V1.4L13.6 0ZM25 12.1L13.5 5.3V5.2H13.4L13.3 5.1V5.2L1.9 12.1V3.1L13.4 1.9L25 3.1V12.1ZM13.4 6.8L24.9 13.5L20.4 16.1L13.3 11.9V13.3L19.2 16.8L18.3 17.3L13.3 14.3V15.7L17.1 18L16.3 18.5L13.3 16.7V18.1L15.2 19.2L13.4 20.3L2 13.6L13.4 6.8ZM1.9 15.1L13.3 21.9V22.9L5.4 18.2V19.6L13.4 24.4V25.5L5.4 20.8V22.2L13.4 27L21.5 22.1V16.9L24.9 14.9V24.9L13.4 31.8L1.9 25V15.1Z" fill="currentColor"/>
         </svg>
         <span class="visually-hidden" lang="en">HTML-Academy</span>
       </a>
     </footer>
+    <script src="../source/js/script.js"></script>
   </body>
 </html>
